# SDRPortal

./: .gitignore  Bootstrap  CMakeLists.txt  Makefile  Makefile.am  configure.ac  make.sh
gnuradio_mods/: README.txt  config.conf  usrp_source_impl.cc  usrp_source_impl.h
gr-sdrp/: CMakeLists.txt
gr-sdrp/cmake/Modules/: sdrpConfig.cmake
gr-sdrp/docs/: README.sdrp
gr-sdrp/docs/doxygen/: Doxyfile.in
gr-sdrp/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-sdrp/grc/: CMakeLists.txt  sdrp_ws_sink_c.xml
gr-sdrp/include/sdrp/: CMakeLists.txt  api.h  ccsds_aos_framer.h  ccsds_tm_conv_decoder.h  ccsds_tm_derandomizer.h  ccsds_tm_framer.h  ccsds_tm_tx.h  constellation_soft_receiver_cf.h  correlate_long_access_code_bb.h  correlate_soft_access_tag_ff.h  costas_refout_freqout_ccf.h  dsn_pn_rx.h  dsn_pn_tx.h  dsn_sequential_rx.h  dsn_sequential_tx.h  pll_freq_acq_cc.h  pll_refout_freqout_ccf.h  sdrp_packet_interpreter.h  square_data_tracker_ff.h  square_sub_tracker_ff.h  sweep_generator_cc.h  ws_sink_c.h
gr-sdrp/lib/: CMakeLists.txt  base64.cc  base64.h  ccsds_aos_framer_impl.cc  ccsds_aos_framer_impl.h  ccsds_tm_conv_decoder_impl.cc  ccsds_tm_conv_decoder_impl.h  ccsds_tm_derandomizer_impl.cc  ccsds_tm_derandomizer_impl.h  ccsds_tm_framer_impl.cc  ccsds_tm_framer_impl.h  ccsds_tm_tx_impl.cc  ccsds_tm_tx_impl.h  constellation_soft_receiver_cf_impl.cc  constellation_soft_receiver_cf_impl.h  correlate_long_access_code_bb_impl.cc  correlate_long_access_code_bb_impl.h  correlate_soft_access_tag_ff_impl.cc  correlate_soft_access_tag_ff_impl.h  costas_refout_freqout_ccf_impl.cc  costas_refout_freqout_ccf_impl.h  dsn_pn_common.h  dsn_pn_rx_impl.cc  dsn_pn_rx_impl.h  dsn_pn_tx_impl.cc  dsn_pn_tx_impl.h  dsn_sequential_common.h  dsn_sequential_rx_impl.cc  dsn_sequential_rx_impl.h  dsn_sequential_tx_impl.cc  dsn_sequential_tx_impl.h  genericSocketInterface.cc  hierarchicalDataflowBlock.cc  pll_freq_acq_cc_impl.cc  pll_freq_acq_cc_impl.h  pll_refout_freqout_ccf_impl.cc  pll_refout_freqout_ccf_impl.h  qa_sdrp.cc  qa_sdrp.h  sdrp_packet_interpreter.cc  (+13 more)
gr-sdrp/lib/fec/: CMakeLists.txt  decode_rs_ccsds.c  decode_rs_ccsds.h  encode_rs_ccsds.c  encode_rs_ccsds.h  fec.c  fec.h  fixed.h  genbut.c  viterbi.c  viterbi27_port.c  viterbi27_port.h  vtest27.c
gr-sdrp/lib/trellis/: CMakeLists.txt  core_algorithms.cc
gr-sdrp/python/: CMakeLists.txt  __init__.py  qa_ws_sink_c.py  sdrp_rds_rx_ws.py
gr-sdrp/swig/: CMakeLists.txt  sdrp_swig.i
gr-sdrportal/: CMakeLists.txt
gr-sdrportal/docs/: README.sdrportal
gr-sdrportal/docs/doxygen/: Doxyfile.in
gr-sdrportal/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-sdrportal/grc/: CMakeLists.txt  basic_decode.grc  sdrportal_to_file.grc  sdrportal_ws_sink_c.xml  sdrportal_ws_source_c.xml
gr-sdrportal/include/sdrportal/: CMakeLists.txt  api.h  ws_sink_c.h  ws_source_c.h
gr-sdrportal/lib/: CMakeLists.txt  generic.h  genericSocketInterface.h  hierarchicalDataflowBlock.h  qa_sdrportal.cc  qa_sdrportal.h  sha1.h  streamConverter.h  test_sdrportal.cc  ws_sink_c_impl.cc  ws_sink_c_impl.h  ws_source_c_impl.cc  ws_source_c_impl.h
gr-sdrportal/python/: CMakeLists.txt  __init__.py  qa_ws_sink_c.py  qa_ws_source_c.py  sdrp_rds_rx.py  sdrp_rds_rx_ws.py
gr-sdrportal/swig/: CMakeLists.txt  sdrportal_swig.i
images/: usrp1_fpga.rbf  usrp1_fpga_rx.rbf  usrp1_ranging_fw.ihx  usrp1_sounder_rx.rbf  usrp1_sounder_tx.rbf  usrp_sounder_rx.rbf
lib/: CMakeLists.txt  clientInterface.h  fcdInterface.h  generic.h  genericSDRInterface.h  genericSocketInterface.h  generic_sdr_interface.h  hackRFInterface.h  hierarchicalDataflowBlock.h  portalCommandSocket.h  portalDataSocket.h  portalProfile.h  portalSocketInterface.h  rtlInterface.h  shellPortal.h  socketInterface.h  streamConverter.h  uhdInterface.h  uhd_interface.h
scripts/: range_demo_rx.sh  range_demo_tx.sh  sounder_demo_rx.sh  sounder_demo_tx.sh
src/: .uhd_interface.cc.swp  CMakeLists.txt  clientInterface.cc  fcdInterface.cc  gen_conversions.cc  generic.cc  genericSDRInterface.cc  genericSocketInterface.cc  generic_sdr_interface.cc  hackRFInterface.cc  hierarchicalDataflowBlock.cc  portalCommandSocket.cc  portalDataSocket.cc  portalProfile.cc  portalSocketInterface.cc  rtlInterface.cc  shellPortal.cc  shell_daemon.cc  socketInterface.cc  streamConverter.cc  types.txt  uhdInterface.cc  uhd_daemon.cc  uhd_interface.cc
uhd_mods/ranging/: codec_ctrl.cpp  db_xcvr2450.cpp  usrp_main.c
www/: portalCMD.js  range_demo.html  rds_demo.html  shellCMD.js  uhd_control.html  waterfall_plot.html  waterfall_plot_new.html  webgl_plot3d.js  webgl_plot3d_shaders.html  wsAudio.js
